# Tracking

./: .gitignore  README.md  pyproject.toml
src/tracking_area/cli/: generate_tracks.py
src/tracking_area/model/: Frame.py
src/tracking_ex/cli/: generate_tracks.py
src/tracking_ex/model/: Frame.py  Line.py  __init__.py  shapes.py
