[project]
name = "Tracking"
version = "0.0.1"
authors = [
    { name="Takanori Kono", email="takanori.kono@gmail.com" },
]
description = "Tracking area"
readme="README.md"
required_python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3", 
    "Operating System :: OS Independent",
]
dependencies = [
  "typer",
  "numpy",
  "matplotlib",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/tkono17/Tracking"

[project.scripts]
generate_tracks = "tracking_ex.cli.generate_tracks:main"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/tracking_ex" ]
